Overflow fix

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 body{
 	width: 100%;
 	display: block;
-	overflow-x: hidden;
+	overflow: hidden;
 	background: #0f0c29;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to right, #24243e, #302b63, #0f0c29); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -447,6 +447,7 @@ a:hover{
 @media (max-width: 1200px) { 
 	.shadow-title, .shadow-title-right {
 		position: absolute;
+		overflow: hidden !important;
 	}
 	.section-parallax {
 		position: absolute;
